<resources>
    <string name="app_name">Random Quotes Widget</string>
    
    <!-- configure screen string resources -->
    <string name="config_title">Random Quotes Widget Configuration</string>
    <string name="config_files_title">
        Enter the paths for the text files with your quotes.
    </string>    
    <string name="config_files_instructions">
        Pick/scan (using a file browser) or enter them manually 
        (separate multiple files with the ; character).
    </string>
    <string name="config_browse_button">Browse</string>
    <string name="config_scan_button">Scan</string> 
    <string name="config_time_title">
        Enter the update period.
    </string>
    <string name="config_time_period_instructions">
        Update period (minutes): How often a new random quote is displayed.
    </string>
    <string-array name="config_time_period_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="config_save_button">Save Configuration</string>    
    <string name="config_log_edittext">*** Configuration Screen Log *** \n</string>
    
    <!-- Widget Screen String resources -->
    <string name="widget_file_name_textview">no text file(s)</string>
    <string name="widget_update_textview">No user/data preferences found</string>
    <string name="widget_line_number_textview">0</string>
    <string name="widget_queue_number_textview">0/0</string>
        
</resources>
