<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/config_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:id="@+id/config_files_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_files_title"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:textStyle="bold"/> 
        <TextView
            android:id="@+id/config_files_instructions_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_files_instructions"
            android:textAppearance="?android:attr/textAppearanceSmall" /> 
        <EditText
            android:id="@+id/config_files_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
            
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/config_browse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_browse_button" 
                android:onClick="browseFileDirectories"/>
            <Button
                android:id="@+id/config_scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_scan_button" 
                android:onClick="scanFileDirectories"/>
        </LinearLayout>
        
        <TextView
            android:id="@+id/config_time_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_time_title"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:textStyle="bold"/> 
        <TextView
            android:id="@+id/config_time_period_instructions_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_time_period_instructions"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Spinner
            android:id="@+id/config_time_period_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:entries="@array/config_time_period_array"/>

        <Button
            android:id="@+id/config_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_save_button" 
            android:onClick="saveUserConfiguration"/>
    
        <EditText
            android:id="@+id/config_log_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_log_edittext"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:editable="false" />

    </LinearLayout>
</ScrollView>
