<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/widget_shape" 
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/widget_file_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/widget_file_name_textview" 
            android:textSize="14sp"
            android:textColor="#a6a6a6">
        </TextView> 
        <TextView
            android:id="@+id/widget_update_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/widget_update_textview" 
            android:textColor="#000000">
        </TextView> 
        <TextView
            android:id="@+id/widget_line_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/widget_line_number_textview" 
            android:textSize="14sp"
            android:textColor="#a6a6a6">
        </TextView> 
        <TextView
            android:id="@+id/widget_queue_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/widget_queue_number_textview" 
            android:textSize="14sp"
            android:textColor="#a6a6a6">
        </TextView> 
                
</RelativeLayout>
